changes in pet schema and controllers
